--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ section {display: flex;}
 .header-nav {border: 1px solid #a0a0a0;}
 .brand {width: 170px; height: 85px; margin-left: -15px; margin-right: 60px;}
 .logo {max-width: 100%; height: auto;}
-.search-box {width: 330px; height: 30px; paddding: 6px 12px; border: 1px solid #a0a0a0;}
+.search-box {width: 330px; height: 30px; padding: 6px 12px; border: 1px solid #a0a0a0;}
 .search-button {background-color: #a0a0a0; color: #ffffff; width: 100px; height: 30px; border: 0; padding: 0;}
 .nav-list {padding-left: 0; width: 575px; margin-top: 10px;}
 .nav-list li a {font-size: 16px; text-transform: uppercase; font-weight: 700; letter-spacing: 0.2px;}
