--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ section {display: flex;}
 .category-text > div { font-size: 16px; font-weight: 200; color: #faa541;}
 .category-text h3 {font-size: 30px; font-weight: 700; line-height: 1;}
 .full-banner { padding: 0 15px; margin: 50px 0; position: relative;}
-.full-banner:before {content: ""; position: absolute; border: 1px solid #ffffff; margin: top: 30px; bottom: 30px; left: 50px; right: 50px; z-index: 1}
+.full-banner:before {content: ""; position: absolute; border: 1px solid #ffffff; top: 30px; bottom: 30px; left: 50px; right: 50px; z-index: 1}
 .full-banner-image {flex: 0 0 58.333333%; background-image: url('../img/vista.jpg'); background-size: cover; background-position: top center; min-height: 400px;}
 .full-banner-sidebar {flex: 0 0 41.666667%; background-color: #364147; text-transform: uppercase; padding: 30px; color: #ffffff; }
 .full-banner-sidebar h4 {font-size: 40px; font-weight: 700; font-style: italic; color: #637f94; line-height: 1;}
