--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ section {display: flex;}
 .full-banner-sidebar > div:nth-of-type(1){ font-size: 60px; font-weight: 700; line-height: 1;}
 .full-banner-sidebar > div:nth-of-type(2) {font-size: 25px; font-weight: 200; letter-spacing: 3px;}
 .full-banner-sidebar .btn.btn-default {margin-top: 50px; text-transform: uppercase; letter-spacing: 1px; z-index: 1}
-footer {display: flex; position: relative; z-index: 0; min-height: 330px; background-color: black;}
+footer {display: flex; flex-wrap: wrap; position: relative; z-index: 0; min-height: 330px; background-color: black;}
 footer:after {content: ""; background-color: #a0a0a0; width: 75%; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: -1}
 .lists {flex: 0 0 75%; padding: 40px 15px;}
 .link-header {text-transform: uppercase; font-size: 16px; font-weight: 700; margin-bottom: 15px;}
@@ -75,6 +75,6 @@ footer a:hover {text-decoration: underline;}
 .ps {flex: 0 0 25%; padding: 40px 0; color: #e5e5e5; font-size: 16px;}
 .ps img {max-width: 230px}
 .demo {padding: 0 30px;}
-.demo:before {content: ""; display: block; width: 100%; height: 1px; margin: 30px 0; background: linear-gradient(to right, #f05a28 0, #e80a89 100%;)}
+.demo:before {content: ""; display: block; width: 100%; height: 1px; margin: 30px 0; background: linear-gradient(to right, #f05a28 0, #e80a89 100%);}
 .copyright {flex: 0 0 75%; padding: 10px 0; font-size: 12px; text-align: center;}
 /***************************************/
